--- a/books.html
+++ b/books.html
@@ -122,9 +122,27 @@
     <p><em>By Dorothy Ifeanyi Makasi</em></p>
     <p>A moving story of love, time, and the impossible choice between what we want and what we must do.
     A tale that lingers in the heart — full of emotion and depth.</p>
-    <p><strong>Format:</strong> eBook (PDF)</p>
   </div>
   <div class="book-actions">
+
+    <!-- Hardcopy Section -->
+    <h3>Hardcopy</h3>
+
+    <!-- Buy Hardcopy – €12.80 -->
+    <style>.pp-J78A9SR97PJUQ{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+    <form action="https://www.paypal.com/ncp/payment/J78A9SR97PJUQ" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+      <input class="pp-J78A9SR97PJUQ" type="submit" value="Buy Hardcopy – €12.80" />
+      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <section style="font-size: 0.75rem;"> Powered by 
+        <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
+             alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
+      </section>
+    </form>
+
+    <hr style="margin:1rem 0;">
+
+    <!-- eBook Section -->
+    <h3>eBook</h3>
 
     <!-- Borrow for 2 weeks – €4 -->
     <style>.pp-4TA3NYB3A3N4S{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
@@ -162,9 +180,27 @@
     <h2>Broken Marriage</h2>
     <p><em>By Dorothy Ifeanyi Makasi</em></p>
     <p>Evelyn’s world shatters when David rejects their third child and abandons the family in pursuit of wealth and pleasure. Stripped of everything, she rebuilds her life from nothing. Years later, David returns—broken and repentant—but some wounds never fully heal.</p>
-    <p><strong>Format:</strong> eBook (PDF)</p>
   </div>
   <div class="book-actions">
+
+    <!-- Hardcopy Section -->
+    <h3>Hardcopy</h3>
+
+    <!-- Buy Hardcopy – €15.16 -->
+    <style>.pp-JMT6C3E7GHL7A{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+    <form action="https://www.paypal.com/ncp/payment/JMT6C3E7GHL7A" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+      <input class="pp-JMT6C3E7GHL7A" type="submit" value="Buy Hardcopy – €15.16" />
+      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <section style="font-size: 0.75rem;"> Powered by 
+        <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
+             alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
+      </section>
+    </form>
+
+    <hr style="margin:1rem 0;">
+
+    <!-- eBook Section -->
+    <h3>eBook</h3>
 
     <!-- Borrow for 2 weeks – €4.80 -->
     <style>.pp-6LYFSUMRNQ2DE{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
