--- a/books.html
+++ b/books.html
@@ -67,6 +67,43 @@
     <section class="books">
       <h2 style="text-align: center;">Jedot Books</h2>
 
+      <!-- Volume 1: English for Italian Beginners -->
+      <div class="book-container">
+  <div class="book-cover">
+    <img src="images/english_for_italian_beginners_cover.jpg" alt="English For Italian Beginners: Inglese per Principianti Italiani - Volume 1">
+  </div>
+  <div class="book-details">
+    <h2>English For Italian Beginners: Inglese per Principianti Italiani - Volume 1</h2>
+    <p><em>Da Dorothy Ifeanyi Makasi</em></p>
+   <p style="margin-top: 15px; line-height: 1.6;">
+      Impara l’inglese passo dopo passo! Questo libro, scritto appositamente per studenti italiani, ti aiuterà a comprendere, parlare e scrivere in inglese con facilità.
+      Ogni unità include vocaboli, esempi, dialoghi e semplici esercizi per migliorare la tua conoscenza dell’inglese in modo naturale.
+    </p>
+
+    <ul style="line-height: 1.6;">
+      <li>L’alfabeto inglese</li>
+      <li>I saluti e le presentazioni</li>
+      <li>Numeri, colori, famiglia e cibo</li>
+      <li>Parti del corpo e professioni</li>
+      <li>Luoghi in Italia e continenti</li>
+    </ul>
+
+    <p style="margin-top: 15px; font-style: italic;">
+      📘 English for Italian Beginners è il primo passo di una trilogia pensata per guidarti dall’inglese base fino a una comunicazione sicura e fluente.
+    </p>
+  </div>
+  <div class="book-actions">
+      
+      <div>
+  <style>.pp-F5AR2EDSRJZX4{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+  <form action="https://www.paypal.com/ncp/payment/F5AR2EDSRJZX4" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+    <input class="pp-F5AR2EDSRJZX4" type="submit" value="Buy Now" />
+    <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+    <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+  </form>
+</div>
+  </div>
+
       <!-- Book 1: Bothersome Kate -->
       <div class="book-container">
         <div class="book-cover">
