--- a/books.html
+++ b/books.html
@@ -97,7 +97,7 @@
       <div>
   <style>.pp-F5AR2EDSRJZX4{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
   <form action="https://www.paypal.com/ncp/payment/F5AR2EDSRJZX4" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-    <input class="pp-F5AR2EDSRJZX4" type="submit" value="Paga €8,00" />
+    <input class="paypal-btn" type="submit" value="Paga €8,00" />
     <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
     <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
   </form>
@@ -169,7 +169,7 @@
     <!-- Buy Hardcopy – €12.80 -->
     <style>.pp-J78A9SR97PJUQ{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
     <form action="https://www.paypal.com/ncp/payment/J78A9SR97PJUQ" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-      <input class="pp-J78A9SR97PJUQ" type="submit" value="Buy Hardcopy – €12.80" />
+      <input class="paypal-btn" type="submit" value="Buy Hardcopy – €12.80" />
       <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
@@ -185,7 +185,7 @@
     <!-- Borrow for 2 weeks – €4 -->
     <style>.pp-4TA3NYB3A3N4S{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
     <form action="https://www.paypal.com/ncp/payment/4TA3NYB3A3N4S" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-      <input class="pp-4TA3NYB3A3N4S" type="submit" value="Borrow for 2 weeks – €4.00" />
+      <input class="paypal-btn" type="submit" value="Borrow for 2 weeks – €4.00" />
       <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
     </form>
@@ -193,7 +193,7 @@
     <!-- Borrow for 4 weeks – €6.80 -->
     <style>.pp-RPQ2CJB6FQZFA{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
     <form action="https://www.paypal.com/ncp/payment/RPQ2CJB6FQZFA" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-      <input class="pp-RPQ2CJB6FQZFA" type="submit" value="Borrow for 4 weeks – €6.80" />
+      <input class="paypal-btn" type="submit" value="Borrow for 4 weeks – €6.80" />
       <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
     </form>
@@ -201,7 +201,7 @@
     <!-- Buy Forever – €10 -->
     <style>.pp-ZNQ2Y684NSGF4{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
     <form action="https://www.paypal.com/ncp/payment/ZNQ2Y684NSGF4" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-      <input class="pp-ZNQ2Y684NSGF4" type="submit" value="Buy Forever – €10.00" />
+      <input class="paypal-btn" type="submit" value="Buy Forever – €10.00" />
       <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
     </form>
@@ -227,7 +227,7 @@
     <!-- Buy Hardcopy – €15.16 -->
     <style>.pp-JMT6C3E7GHL7A{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
     <form action="https://www.paypal.com/ncp/payment/JMT6C3E7GHL7A" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-      <input class="pp-JMT6C3E7GHL7A" type="submit" value="Buy Hardcopy – €15.16" />
+      <input class="paypal-btn" type="submit" value="Buy Hardcopy – €15.16" />
       <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
@@ -243,7 +243,7 @@
     <!-- Borrow for 2 weeks – €4.80 -->
     <style>.pp-6LYFSUMRNQ2DE{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
 <form action="https://www.paypal.com/ncp/payment/6LYFSUMRNQ2DE" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-  <input class="pp-6LYFSUMRNQ2DE" type="submit" value="Borrow for 2 weeks – €4.80" />
+  <input class="paypal-btn" type="submit" value="Borrow for 2 weeks – €4.80" />
   <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
   <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
 </form>
@@ -251,7 +251,7 @@
     <!-- Borrow for 4 weeks – €8.50 -->
     <style>.pp-FNAFJKCSMAGTW{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
 <form action="https://www.paypal.com/ncp/payment/FNAFJKCSMAGTW" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-  <input class="pp-FNAFJKCSMAGTW" type="submit" value="Borrow for 4 weeks – €8.50" />
+  <input class="paypal-btn" type="submit" value="Borrow for 4 weeks – €8.50" />
   <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
   <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
 </form>
@@ -259,7 +259,7 @@
     <!-- Buy Forever – €11.50 -->
     <style>.pp-8C96HF3KELFY2{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
 <form action="https://www.paypal.com/ncp/payment/8C96HF3KELFY2" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-  <input class="pp-8C96HF3KELFY2" type="submit" value="Buy Forever – €11.50" />
+  <input class="paypal-btn" type="submit" value="Buy Forever – €11.50" />
   <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
   <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
 </form>
@@ -288,7 +288,7 @@
     <!-- Buy Hardcopy – €8.00 -->
     <style>.pp-JEVULRLB2MMDU{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
     <form action="https://www.paypal.com/ncp/payment/JEVULRLB2MMDU" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-      <input class="pp-JEVULRLB2MMDU" type="submit" value="Buy Hardcopy – €8.00" />
+      <input class="paypal-btn" type="submit" value="Buy Hardcopy – €8.00" />
       <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
@@ -304,7 +304,7 @@
     <!-- Borrow for 2 weeks – €3.00 -->
     <style>.pp-ARGSRUC74XTZL{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
     <form action="https://www.paypal.com/ncp/payment/ARGSRUC74XTZL" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-      <input class="pp-ARGSRUC74XTZL" type="submit" value="Borrow for 2 weeks – €3.00" />
+      <input class="paypal-btn" type="submit" value="Borrow for 2 weeks – €3.00" />
       <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
@@ -315,7 +315,7 @@
     <!-- Borrow for 4 weeks – €5.60 -->
     <style>.pp-U6QR3QFAXH8CG{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
     <form action="https://www.paypal.com/ncp/payment/U6QR3QFAXH8CG" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-      <input class="pp-U6QR3QFAXH8CG" type="submit" value="Borrow for 4 weeks – €5.60" />
+      <input class="paypal-btn" type="submit" value="Borrow for 4 weeks – €5.60" />
       <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
@@ -326,7 +326,7 @@
     <!-- Buy Forever – €6.80 -->
     <style>.pp-9VUQRQW6VTKW2{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
     <form action="https://www.paypal.com/ncp/payment/9VUQRQW6VTKW2" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-      <input class="pp-9VUQRQW6VTKW2" type="submit" value="Buy Forever – €6.80" />
+      <input class="paypal-btn" type="submit" value="Buy Forever – €6.80" />
       <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
