--- a/books.html
+++ b/books.html
@@ -330,28 +330,26 @@
     <p style="text-align:center">&copy; 2025 Jedot Holding Services. All rights reserved.</p>
   </footer>
 
-  <script>
-    function showPayPal(id) {
-      document.querySelectorAll('.paypal-button-wrapper').forEach(el => el.style.display = 'none');
-      const container = document.getElementById(id);
-      container.style.display = 'block';
-      if (!container.hasChildNodes()) {
-        let label = container.id.includes('2weeks') ? 'Borrow for 2 weeks' :
-                    container.id.includes('4weeks') ? 'Borrow for 4 weeks' :
-                    'Buy Forever';
-        let price = container.id.includes('2weeks') ? '2.80' :
-                    container.id.includes('4weeks') ? '5.00' : '5.80';
-        paypal.Buttons({
-          style: { color: 'blue', label: 'pay', shape: 'pill' },
-          createOrder: (data, actions) => actions.order.create({
-            purchase_units: [{ description: label, amount: { value: price } }]
-          }),
-          onApprove: (data, actions) => actions.order.capture().then(details => {
-            alert('Thank you, ' + details.payer.name.given_name + '! You will receive your book at jedotholdingservices2025@gmail.com');
-          })
-        }).render(`#${id}`);
-      }
-    }
-  </script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AT45qNgguC6V2qg7rPX727d0d6a27Zzfb_GSF8N-6yT2mtm1Zq_nao8Y4dJYbLLwAmemWsrUMqvypHse&disable-funding=paylater&currency=EUR"></script>
+<script>
+function showPayPal(id) {
+  const container = document.getElementById(id);
+  if (!container) return;
+  container.style.display = 'block';
+}
+
+paypal.Buttons({
+  createOrder: function(data, actions) {
+    return actions.order.create({
+      purchase_units: [{ amount: { value: '10.00' } }]
+    });
+  },
+  onApprove: function(data, actions) {
+    return actions.order.capture().then(function(details) {
+      alert('Transaction completed by ' + details.payer.name.given_name);
+    });
+  }
+}).render('#paypal-container');
+</script>
 </body>
 </html>
