--- a/services.html
+++ b/services.html
@@ -20,14 +20,14 @@
     <section class="services">
       <h2>Our Services</h2>
       <ul style="list-style-type: disc; padding-left: 40px; text-align: left; max-width: 600px; margin: 0 auto;">
-        <li><strong>Nursing Assistance</strong> – Compassionate support and basic healthcare services from a qualified professional.</li>
+        <li><strong>Auxiliary Nursing Assistance</strong> – Compassionate support and basic auxiliary healthcare services from a qualified professional.</li>
         <li><strong>Basic English Tutoring</strong> – One-on-one or small group sessions for building foundational English language skills.</li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+    <p>&copy; 2025 - 2026 Jedot Holding Services. All rights reserved.</p>
   </footer>
 </body>
 </html>
