--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
       <a href="contact.html"><button>Contact</button></a>
       <a href="services.html"><button>Services</button></a>
     </nav>
+    <div id="google_translate_element"></div>
   </header>
 
   <main>
@@ -34,6 +35,22 @@
 
       <p>At Jedot Holding Services, artistry meets compassion and professionalism — blending skills, creativity, and care to serve with impact.</p>
     </section>
+    <script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement(
+    {
+      pageLanguage: 'en',
+      includedLanguages: 'it,en',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    },
+    'google_translate_element'
+  );
+}
+</script>
+
+<script type="text/javascript"
+src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
   </main>
 
   <footer>
